--- a/notebooks/02 - quick intro.ipynb
+++ b/notebooks/02 - quick intro.ipynb
@@ -1,20 +1,35 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ressources:\n",
-    "- https://realpython.com/api-integration-in-python/\n",
-    "- https://realpython.com/python-requests/"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The watermark extension is already loaded. To reload it, use:\n",
+      "  %reload_ext watermark\n",
+      "2019-06-26 \n",
+      "\n",
+      "CPython 3.7.3\n",
+      "IPython 7.5.0\n",
+      "\n",
+      "requests 2.22.0\n",
+      "\n",
+      "compiler   : GCC 8.3.0\n",
+      "system     : Linux\n",
+      "release    : 5.0.0-19-generic\n",
+      "machine    : x86_64\n",
+      "processor  : x86_64\n",
+      "CPU cores  : 8\n",
+      "interpreter: 64bit\n"
+     ]
+    }
+   ],
    "source": [
+    "%load_ext watermark\n",
     "import requests\n",
     "from requests.auth import HTTPBasicAuth\n",
     "from requests import Session\n",
@@ -23,11 +38,15 @@
     "from os import environ\n",
     "from pathlib import Path\n",
     "from collections import defaultdict\n",
-    "import yaml\n",
     "import json\n",
+    "import yaml\n",
+    "import matplotlib.pyplot as plt\n",
+    "from pandas import DataFrame\n",
+    "import pandas as pd\n",
     "from IPython.display import JSON\n",
     "\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "%watermark -dvmp requests"
    ]
   },
   {
@@ -43,8 +62,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "class Config(defaultdict):\n",
     "    \"\"\"\n",
     "    Set and save creedentials for IoT services creedentials\n",
@@ -164,24 +181,33 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Response [200]>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "s = Session()\n",
     "s.auth = auth\n",
     "\n",
     "# sets cookie\n",
-    "s.get(service_url)"
+    "r = s.get(service_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r.status_code"
    ]
   },
   {
@@ -202,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +237,7 @@
        "['JSESSIONID', 'XSRF-TOKEN', 'ARRAffinity', '__VCAP_ID__', 'styleId']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,16 +291,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> if getting a `status_code` of 403 or such a window, e.g. for [HTTP Data Recorder Service](https://bosch-iot-insights.com/data-recorder-service), plese check the user autorization at https://bosch-iot-insights.com/ui/project/PROJECT_NUMBER/admin/users\n",
+    "> if getting a `status_code` of 403 or such a window, e.g. for [HTTP Data Recorder Service](https://bosch-iot-insights.com/data-recorder-service), please check the user autorization at https://bosch-iot-insights.com/ui/project/PROJECT_NUMBER/admin/users\n",
+    "> You can check your user authorization, see at the bottom of the notebook.\n",
     "\n",
+    "![Not allowed...](img/Sorry.png)\n",
     "\n",
-    "![Not allowed...](img/Sorry.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "One can get the documentation for `POST` operations [here](https://bosch-iot-insights.com/data-recorder-service/swagger-ui.html#!/Data45Recorder45Service/receiveDataUsingPOST)"
    ]
   },
@@ -287,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +343,7 @@
        "200"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,11 +354,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "collection = json.loads(r3.content.decode())[0]['name']"
+    "collection = r3.json()[0]['name']"
    ]
   },
   {
@@ -349,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,25 +403,15 @@
     "    s.headers['X-XSRF-TOKEN'] = s.cookies.get('XSRF-TOKEN')\n",
     "    s.headers['Content-Type'] = 'application/json;charset=UTF-8'\n",
     "\n",
-    "    url5 = f\"https://bosch-iot-insights.com/mongodb-query-service/v2/{project}/execute-aggregation-query\"\n",
-    "    r5 = s.post(url5, data=json.dumps(query))"
+    "    url4 = f\"https://bosch-iot-insights.com/mongodb-query-service/v2/{project}/execute-aggregation-query\"\n",
+    "    r4 = s.post(url4, data=json.dumps(query))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Display that"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pandas import DataFrame\n",
-    "import pandas as pd"
+    "## Display that"
    ]
   },
   {
@@ -409,12 +420,108 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = json.loads(r5.content)"
+    "data4 = r4.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "you can get directly the json with the method `.json()`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mSignature:\u001b[0m \u001b[0mr4\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m\n",
+       "Returns the json-encoded content of a response, if any.\n",
+       "\n",
+       ":param \\*\\*kwargs: Optional arguments that ``json.loads`` takes.\n",
+       ":raises ValueError: If the response body does not contain valid json.\n",
+       "\u001b[0;31mFile:\u001b[0m      ~/.local/share/virtualenvs/IoT-2JHJSu5H/lib/python3.7/site-packages/requests/models.py\n",
+       "\u001b[0;31mType:\u001b[0m      method\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "r4.json?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and display it in the browser with the `IPython.display.JSON` function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mInit signature:\u001b[0m\n",
+       "\u001b[0mJSON\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0murl\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mfilename\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mexpanded\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mmetadata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mroot\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'root'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m     \n",
+       "JSON expects a JSON-able dict or list\n",
+       "\n",
+       "not an already-serialized JSON string.\n",
+       "\n",
+       "Scalar types (None, number, string) are not allowed, only dict or list containers.\n",
+       "\u001b[0;31mInit docstring:\u001b[0m\n",
+       "Create a JSON display object given raw data.\n",
+       "\n",
+       "Parameters\n",
+       "----------\n",
+       "data : dict or list\n",
+       "    JSON data to display. Not an already-serialized JSON string.\n",
+       "    Scalar types (None, number, string) are not allowed, only dict\n",
+       "    or list containers.\n",
+       "url : unicode\n",
+       "    A URL to download the data from.\n",
+       "filename : unicode\n",
+       "    Path to a local file to load the data from.\n",
+       "expanded : boolean\n",
+       "    Metadata to control whether a JSON display component is expanded.\n",
+       "metadata: dict\n",
+       "    Specify extra metadata to attach to the json display object.\n",
+       "root : str\n",
+       "    The name of the root element of the JSON tree \n",
+       "\u001b[0;31mFile:\u001b[0m           ~/.local/share/virtualenvs/IoT-2JHJSu5H/lib/python3.7/site-packages/IPython/core/display.py\n",
+       "\u001b[0;31mType:\u001b[0m           type\n",
+       "\u001b[0;31mSubclasses:\u001b[0m     GeoJSON\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "JSON?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -84151,7 +84258,7 @@
        "<IPython.core.display.JSON object>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {
       "application/json": {
        "expanded": false,
@@ -84162,12 +84269,12 @@
     }
    ],
    "source": [
-    "JSON(data)"
+    "JSON(data4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84176,16 +84283,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = DataFrame(data[0]['payload']['measurements'])"
+    "df = DataFrame(data4[0]['payload']['measurements'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -84216,10 +84323,10 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4530</th>\n",
+       "      <th>4720</th>\n",
        "      <td>Flat 1</td>\n",
-       "      <td>{'$date': '2018-07-21T08:50:39Z'}</td>\n",
-       "      <td>4.75</td>\n",
+       "      <td>{'$date': '2018-07-20T20:28:52Z'}</td>\n",
+       "      <td>0.01</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -84227,10 +84334,10 @@
       ],
       "text/plain": [
        "       meter                          timestamp  value\n",
-       "4530  Flat 1  {'$date': '2018-07-21T08:50:39Z'}   4.75"
+       "4720  Flat 1  {'$date': '2018-07-20T20:28:52Z'}   0.01"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84241,7 +84348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84250,7 +84357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84259,16 +84366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -84285,6 +84383,168 @@
    "source": [
     "with plt.style.context('ggplot'):\n",
     "    df.value.plot(figsize=(16,9))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Delete the records"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputDataId = data4[0][\"_id\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url5 = f\"https://bosch-iot-insights.com/project-management-service/v1/{project}/input-data/collections/{collection}/documents/{inputDataId}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [403]>"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.delete(url5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Not the right permissions granted for the user. Check our permissions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url6 = f\"https://bosch-iot-insights.com/project-management-service/v1/{project}/users\"\n",
+    "r6 = s.get(url6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data6 = r6.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/json": [
+       {
+        "active": true,
+        "createdAt": "2019-06-21T17:26:43Z",
+        "email": "zz9309031049412@project.bosch-iot-insights.com",
+        "firstName": null,
+        "lastName": null,
+        "name": "zz9309031049412-c1ac9e02-aea2-4cff-b762-f98acacdb644",
+        "removable": false,
+        "roles": [
+         "ACCESS",
+         "DATA_PROVIDER",
+         "USER",
+         "POWER_USER",
+         "MANAGER"
+        ],
+        "technical": true,
+        "updatedAt": "2019-06-21T17:26:43Z",
+        "userId": "953014d6-42a7-487f-8936-61c2d4c21f98"
+       },
+       {
+        "active": true,
+        "createdAt": "2019-06-21T17:28:09Z",
+        "email": "shiliba@yahoo.fr",
+        "firstName": null,
+        "lastName": null,
+        "name": "shiliba@yahoo.fr",
+        "removable": true,
+        "roles": [
+         "ACCESS",
+         "DATA_PROVIDER",
+         "USER",
+         "POWER_USER",
+         "MANAGER"
+        ],
+        "technical": false,
+        "updatedAt": "2019-06-21T20:38:15Z",
+        "userId": "3cbd53a6-e857-4bd9-a58e-b9aa6e3f79f2"
+       }
+      ],
+      "text/plain": [
+       "<IPython.core.display.JSON object>"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {
+      "application/json": {
+       "expanded": false,
+       "root": "root"
+      }
+     },
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "JSON(data6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ACCESS', 'DATA_PROVIDER', 'USER', 'POWER_USER', 'MANAGER']\n"
+     ]
+    }
+   ],
+   "source": [
+    "for user in data6:\n",
+    "    if user['name'] == username:\n",
+    "        print(user['roles'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the documentation, 'ADMIN' rights are needed for deletion"
    ]
   }
  ],
